--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -24,6 +24,14 @@
   color: white;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: #222222;
+}
+
 .App-link {
   color: #61dafb;
 }
